revamp to user ds, create service layer
