# src/controllers/authentication.ts
@@ -1,43 +1,24 @@
 import express from "express";
-import { getUserByEmail, createUser } from "db/users";
-import { authentication, random } from "helpers";
+import { findUser, verifyUser, createUser, generateSessionToken } from "services/users";
 
 export const login = async (req: express.Request, res: express.Response) => {
   try {
-    const { email, password } = req.body;
+    const { email, password }: {email: string, password: string} = req.body;
 
     if (!email || !password) {
       return res.sendStatus(400);
     }
 
-    const user = await getUserByEmail(email).select(
-      "+authentication.salt +authentication.password"
-    );
-
-    if (!user || !user.authentication) {
-      return res.sendStatus(400);
+    const user = await findUser({email}, {password: 1}, true, {lean: false});
+    const isUser: boolean = await verifyUser(user, email, password)
+    if(!isUser){
+      return res.sendStatus(404);
     }
 
-    const expectedHash = authentication(
-      user.authentication.salt || "",
-      password
-    );
+    const token: string = generateSessionToken(user);
 
-    if (user.authentication.password != expectedHash) {
-      return res.sendStatus(403);
-    }
-
-    const salt = random();
-    user.authentication.sessionToken = authentication(
-      salt,
-      user._id.toString()
-    );
-
-    await user.save();
-
-    res.cookie("MSA-AUTH", user.authentication.sessionToken, {
-      domain: "localhost",
-      path: "/",
+    res.cookie("MSA-AUTH", token, {
+      path: "/"
     });
 
     return res.status(200).json(user).end();
@@ -49,39 +30,33 @@ export const login = async (req: express.Request, res: express.Response) => {
 
 export const register = async (req: express.Request, res: express.Response) => {
   try {
-    const { email, password, username, isAdmin } = req.body;
+    const { email, password, username, isAdmin }: {email: string, password: string, username: string, isAdmin?: boolean}
+     = req.body;
 
     if (!email || !password || !username) {
       return res.sendStatus(400);
     }
     console.log("registering ...");
 
-    const existingUser = await getUserByEmail(email);
+    const existingUser = await findUser({email: email});
 
     if (existingUser) {
       return res.sendStatus(400);
     }
 
-    const salt = random();
-    const user = await createUser({
-      email,
-      username,
-      isAdmin,
-      authentication: {
-        salt,
-        password: authentication(salt, password),
-      },
-    });
+    const user = await createUser({email: email, username: username, password: password, isAdmin: isAdmin?})
     const result = {
       "message": "User created",
       "data": {
-        "id": user._id
+        "id": user._id,
+        "username": user.username,
+        "email": user.email
       }
     };
 
     return res.status(201).json(result).end();
   } catch (error) {
     console.log(error);
-    return res.sendStatus(400);
+    return res.sendStatus(500);
   }
 };
